# genji

./: .gitignore  Cargo.toml  README.md  lib-doc.md
genji_macros/: Cargo.toml
genji_macros/src/: lib.rs
genji_macros/src/insert/: main.rs
src/: helpers.rs  lib.rs  prelude.rs  shape.rs  store.rs
src/audio/: mod.rs
src/ecs/: mod.rs
src/graphics/: mod.rs  sprite.rs  spritemap.rs  text.rs
src/graphics/shaders/: mod.rs  shape.frag  shape.vert  texture.frag  texture.vert
src/input/: mod.rs
src/state/: mod.rs
