[package]
name = "genji"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.21"
genji_macros = { path = "genji_macros" }
glium = "0.32.1"
hecs = "0.10.3"
image = "0.24.6"
once_cell = "1.18.0"
